fixed hint styling to have too much extra whitespace on the top/bottom

--- a/cards/main/style.css
+++ b/cards/main/style.css
@@ -28,7 +28,7 @@ ol, ul {
 }
 
 /* makes the summary tag's clickable area not span the entire width of the given area */
-summary {
+.summary-test {
   display: inline-block;
   width: min-content;
   white-space: nowrap;
